--- a/views/index.pug
+++ b/views/index.pug
@@ -16,10 +16,10 @@ block content
  
   h2.dayNight
 
-  h3.dayNight Tech Stack
+  h3.dayNight.center Tech Stack
   mixin stack(tech)
     li.stack= tech
-  ul.dayNight
+  ul
     +stack('Node.JS')
     +stack('Express')
     +stack('Jade/Pug')
@@ -30,4 +30,4 @@ block content
 
 block footer
   #footer
-    h4.dayNight= ">>> Currently seeking employment oppertunities in Victoria, BC <<<"
+    h4.dayNight.center= ">>> Currently seeking employment oppertunities in Victoria, BC <<<"
