--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -280,7 +280,8 @@ profile {
 }
 
 .like {
-  font-size: 5rem;
+  top: 3px;
+  font-size: 3rem;
   margin: 2rem;
 }
 
@@ -392,6 +393,87 @@ profile {
 .cart.shake {
   -webkit-animation: shakeCart 0.4s ease-in-out forwards;
           animation: shakeCart 0.4s ease-in-out forwards;
+}
+
+.center {
+  text-align: center;
+}
+
+ul {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border-radius: 10px;
+  padding: 20px;
+  width: 85vw;
+  background: #ebf5fc;
+  -webkit-box-shadow: -2px -2px 5px white, 3px 3px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: -2px -2px 5px white, 3px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+ul li {
+  position: relative;
+  list-style: none;
+  text-align: center;
+  margin: 15px;
+}
+
+ul li label {
+  position: relative;
+  cursor: pointer;
+}
+
+ul li label input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+}
+
+ul li label :hover ~ .icon-box {
+  color: saddlebrown;
+}
+
+ul li label :checked ~ .icon-box {
+  color: saddlebrown;
+  -webkit-box-shadow: inset -2px -2px 5px white, inset 3px 3px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: inset -2px -2px 5px white, inset 3px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+ul li label :checked ~ .icon-box .fa {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+}
+
+ul li label .icon-box {
+  width: 60px;
+  height: 60px;
+  color: #5d5851;
+  background: #ebf5fc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: -2px -2px 5px white, 3px 3px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: -2px -2px 5px white, 3px 3px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+ul li label .icon-box .fa {
+  font-size: 30px;
+  color: #6a9bd8;
 }
 
 @media screen and (max-height: 450px) {
